2010-11-07  Helmut Eller  <heller@common-lisp.net>

	* swank-loader.lisp: ASDF free again.  And proud of it!
	(default-fasl-dir, load-swank): Remove asdf stuff.

2010-11-03  Stas Boukarev  <stassats@gmail.com>

	* swank-loader.lisp (*architecture-features*): Add :arm for CCL
	ARM port.

2010-11-02  Martin Simmons  <martin@lispworks.com>

	* swank-lispworks.lisp (list-callers-internal): Revert to previous
	low level implementation, fixed for LW6.
	(list-callees-internal): Reimplement using low level instead of
	the compiler's xref.

2010-10-23  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-goto-location-position): In case of
	(:function-name name) go to (point-min) before searching for
	function. Remove redundant regexp and regexp-quote function name
	before inserting it into a regexp.

2010-10-21  Helmut Eller  <heller@common-lisp.net>

	In ABCL, try harder to find the source of stack frames.

	* swank-abcl.lisp (source-location): Now a GF.
	(source-location [java-stack-frame]): New.
	(source-location [lisp-stack-frame]): New.
	(source-location [function]): New.
	(frame-source-location, find-definitions): Use them.
	(*source-path*, find-definitions): New.
	(system-property, pathname-parent, pathname-absolute-p)
	(split-string, path-separator, search-path-property)
	(jdk-source-path, class-path, zipfile-contains-p)
	(find-file-in-path): Noise for filename frobbing.

2010-10-21  Helmut Eller  <heller@common-lisp.net>

	Require ABCL 0.22 and remove obsolete conditionalisation.

	* swank-abcl.lisp (call-with-debugger-hook)
	(install-debugger-globally)
	(call-with-debugging-environment, backtrace, print-frame, spawn):
	Remove #+/#- stuff.
	(preferred-communication-style): Return :spawn unconditionally.
	(sys::break): Removed.

2010-10-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-connect): Convert the port number read from
	minibuffer to an integer, passing it as a string to
	`make-network-process' isn't portable.
	Patch by Marko Kocic.
