@@ -1,5 +1,11 @@
 2010-11-07  Helmut Eller  <heller@common-lisp.net>
 
+	* swank-backend.lisp (label-value-line): Remove display-nil-value.
+	And the other stuff too.
+	(label-value-line*): Idem.
+
+2010-11-07  Helmut Eller  <heller@common-lisp.net>
+
 	* swank-loader.lisp: ASDF free again.  And proud of it!
 	(default-fasl-dir, load-swank): Remove asdf stuff.
 
